--- a/we-work-for.html
+++ b/we-work-for.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <title>Document</title>
 </head>
 <body>
@@ -12,17 +13,111 @@
             <div class="menu-container">
               <ul>
                 <li>
-                  <a href="index.html">Home</a>
+                    <img src="campaign_logo.png" alt="">
                 </li>
                 <li>
-                  <a href="we-work-for.html">Recipe</a>
+                  <a href="index.html">About us</a>
                 </li>
                 <li>
-                  <a href="petition.html">About us</a>
+                  <a href="we-work-for.html">Our work</a>
                 </li>
+                <li>
+                  <a href="petition.html">Petition</a>
+                </li>
+            <li>
+                <input type="search" class="search-input" placeholder="Search">
+          <i class="fa-solid fa-magnifying-glass" id="search-icon"></i>
+            </li>
+                
               </ul>
             </div>
           </nav>
+
+          <section class="hero">
+            <div class="hero-container">
+
+                <div class="hero-text">
+
+                    <p class="hero-text-first">We are working for cleanliness of the oceanes and the nature</p>
+                    <p class="hero-text-second">Our oceans and nature need someone to stand up for them and if nobody wants to do it we will. Read more about our work here.</p>
+          
+                  </div>
+
+                  <div class="hero-change">
+          <input type="change" class="change-input" placeholder="Help make a change!">
+        </div>
+
+
     </div>
+
+</div>
+<section>
+
+    <section class="things-we-have">
+        <div class="things-we-have-headline">
+          <h3>Things we have to deal with on a daily basis and how we try to prevent it</h3>
+        </div>
+
+        <div class="things-we-have-content-block">
+            <div class="things-we-have-content-block-boxes things-we-have-box">
+                <div class="things-we-have-content-block-boxes things-we-have-box-text-first">
+                    <p>People polluting the water on purpose.
+                        </p>
+                </div>
+                <div class="things-we-have-content-block-boxes things-we-have-box-text-second">
+                    <p>Many people have no regard for keeping anything clean much less the oceans from plastics so we strive to explain to them that this is not the way every time we see something like this.</p>
+                </div>
+            </div>
+            <div class="things-we-have-content-block-boxes">
+                <img src="https://picsum.photos/560/380" alt="">
+            </div>
+
+        </div>
+
+        <div class="things-we-have-content-block">
+            <div class="things-we-have-content-block-boxes things-we-have-box">
+                <div class="things-we-have-content-block-boxes things-we-have-box-text-first-2">
+                    <p>Factories throwing their plastic waste in the oceans.
+                         </p>
+                </div>
+                <div class="things-we-have-content-block-boxes things-we-have-box-text-second-2">
+                    <p>Many factories have nothing to do with their waste and they throw it in the oceans polluting it without a drop of remorse.</p>
+                </div>
+            </div>
+            <div class="things-we-have-content-block-boxes">
+                <img src="https://picsum.photos/560/380" alt="">
+            </div>
+
+        </div>
+
+
+        <div class="things-we-have-content-block">
+            <div class="things-we-have-content-block-boxes things-we-have-box">
+                <div class="things-we-have-content-block-boxes things-we-have-box-text-first-3">
+                    <p>Ocean animals trapped in plastics.
+                    </p>
+                </div>
+                <div class="things-we-have-content-block-boxes things-we-have-box-text-second-3">
+                    <p>The animals that inhabit the ocean often happen to be entrapped in plastic residue and we try to help them whatever way we can. </p>
+                </div>
+            </div>
+            <div class="things-we-have-content-block-boxes">
+                <img src="https://picsum.photos/560/380" alt="">
+            </div>
+
+        </div>
+
+
+</section>
+
+<section class="behind-the-scenes">
+    <div class="behind-the-scenes-headline">
+        <h3>Behind the scenes of our organization</h3>
+
+    </div>
+
+
+</section>
+
 </body>
 </html>
